# illini-mario

./: CMakeLists.txt  PROPOSAL.md  README.md
apps/: game_gui.cc
assets/: jump.aup
assets/jump_data/eff/d1c/: eff1cbef.au
include/core/: core_constants.cc  core_constants.h  game.h  platform.h  player.h
include/gui/: game_app.h  gui_constants.cc  gui_constants.h
include/physics/: accelerated_entity.h  entity.h  interactions.h
src/: example.cc
src/core/: game.cc  platform.cc  player.cc
src/gui/: game_app.cc
src/physics/: accelerated_entity.cc  entity.cc  interactions.cc
tests/: test_example.cc
tests/core/: test_core_entity.cc  test_game.cc
tests/physics/: test_interactions.cc  test_physics_entity.cc  test_physics_interactions.cc
